5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1616_2938.log
== TEST (2019-04-01 14:07:22) 
-- CODE:
from math import*
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input())
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:07:34) 
-- CODE:
from math import*
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input())
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.221692
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
17.79
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:07:40) 
-- CODE:
from math import*
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input())
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:08:54) 
-- CODE:
from math import*
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = radians(float(input()))
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:01) 
-- CODE:
ang = float(input())
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
62.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:05) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:11:54) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.216492
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
17.79
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:12:34) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.175872
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
17.79
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:02) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*

c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:15:16) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.147332
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
17.79
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:21) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:15:52) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.255338
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
17.79
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:37) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))

c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:16:38) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))

c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.169202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2938/main.py", line 5, in <module>
    c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:40) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))

c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:16) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:17) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:17:32) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.207672
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
17.79
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:33) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:38) 
-- CODE:
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = float(input( "angulo de a e b:"))
from math import*
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round radians((c , 2)))
-- ERROR:
File "XXXX", line 6
    print(round radians((c , 2)))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:51) 
-- CODE:
from math import*
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = radians(float(input( "angulo de a e b:")))
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- OUTPUT:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:24:53) 
-- CODE:
from math import*
a = float(input("distacia para arvore1:"))
b = float(input("distancia para arvore 2:"))
ang = radians(float(input( "angulo de a e b:")))
c = sqrt( a ** 2 + b ** 2 -(2 * a * b * cos(ang)))
print(round(c , 2))
-- EXECUTION TIME:
0.160922
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
9.17
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
